--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.12",
+    "axios": "^1.4.0",
     "firebase": "^9.22.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -22,6 +23,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
