--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
+    "stripe": "^12.9.0",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2"
   },
